bug 571800 alignment of columns correctde on usermovedetails page
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7523 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/src/admin/css/UserDetails.css
+++ b/src/admin/css/UserDetails.css
@@ -146,21 +146,16 @@ div#shared li.sharedifolders a:link, div#shared li.sharedifolders a:visited
 
 .ifolderlistheader .namecolumnuserdetails
 {
-		    width: 27.3em;
+	width: 29.9em;
 }
 
 .ifolderlistheader .ownercolumn
 {
-	width: 13.5em;
+	width: 14.5em;
 }	
 
 .ifolderlistheader .sizecolumn
 {
-}
-
-.ifolderlistheader .sizecolumnuserdetails
-{
-    width: 13.5em;
 }
 
 .ifolderlistitem
